web-infras/parser/tests/fixtures/babel/core/uncategorised/464/output.txt
[SyntaxError]: Illegal continue statement: no surrounding iteration statement. (1,34)
1|x: while (true) { (function () { continue; }); }
 |                                ^
